Bug 156890 - Spotlight colors hide expand/collapse arrows
Summary: Spotlight colors hide expand/collapse arrows
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.3 release
Hardware: All Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.2.0
Keywords:
Depends on:
Blocks: Sidebar-Styles
  Show dependency treegraph
 
Reported: 2023-08-24 09:56 UTC by medmedin2014
Modified: 2023-09-12 06:27 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Spotlight colors hide expand/collapse arrows (118.78 KB, image/png)
2023-08-24 09:56 UTC, medmedin2014
Details

Note You need to log in before you can comment on or make changes to this bug.
Description medmedin2014 2023-08-24 09:56:03 UTC
Created attachment 189124 [details]
Spotlight colors hide expand/collapse arrows

Spotlight colors hide expand/collapse arrows. See attached image for more info.

Version: 7.6.0.3 (X86_64) / LibreOffice Community
Build ID: 60(Build:3)
CPU threads: 2; OS: Linux 6.4; UI render: default; VCL: kf5 (cairo+wayland)
Locale: en-US (en_US.UTF-8); UI: en-US
7.6.0-1
Calc: threaded

Operating System: Manjaro Linux 
KDE Plasma Version: 5.27.7
KDE Frameworks Version: 5.109.0
Qt Version: 5.15.10
Kernel Version: 6.4.11-3-MANJARO (64-bit)
Graphics Platform: Wayland
Comment 1 Kira Tubo 2023-09-01 15:08:19 UTC
Reproducible in both stable and master builds.

Reproduction steps:
1. On right side bar, click "Styles"
2. Click "Spotlight" checkbox at bottom of expanded menu

Version: 7.6.0.3 (X86_64) / LibreOffice Community
Build ID: 69edd8b8ebc41d00b4de3915dc82f8f0fc3b6265
CPU threads: 6; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 695ae365dcab7c7dd59b39411299c5c200081885
CPU threads: 6; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 2 Kira Tubo 2023-09-08 03:28:12 UTC
Also looks like an enhancement request since the arrows themselves seem to be functional. It's just that the colors make them look non-existent. Adding libreoffice-ux-advise@lists.freedesktop.org to review and advise.
Comment 3 Heiko Tietze 2023-09-08 07:00:13 UTC
Yes, we should start the rectangle after the expander icon (?). Should be enough space. 

Could be lcl_Insert() in sfx2/source/dialog/StyleList.cxx
Comment 4 Jim Raykowski 2023-09-10 05:33:03 UTC
Here's a go at making the SalInstanceTreeView (used by x11, windows, qt5) behave like the GtkInstanceTreeView when centering an entry context bitmap would interfere with the expand/collapse buttons:
https://gerrit.libreoffice.org/c/core/+/156787
Comment 5 Commit Notification 2023-09-11 22:46:56 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4b2543693ed3ffb4d9f0d70f53f32127115c128d

tdf#156890 SalInstanceTreeView: Indent the entry context bitmap

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.