tdf#156890 SalInstanceTreeView: Indent the entry context bitmap

when the bitmap is too large to center without it touching the expand
button

Change-Id: If4e307ed50eff9bdebe6c377847283ae2eea9543
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/156787
Tested-by: Jenkins
Tested-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
Reviewed-by: Jim Raykowski <raykowj@gmail.com>